<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fil.githubapiexample.screens.details.RepositoryDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_avatar_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/user_name_text_view"
            style="@style/InfoFieldTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_avatar_image_view"
            tools:text="User Name" />

        <ProgressBar
            android:id="@+id/avatar_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/user_avatar_image_view"
            app:layout_constraintEnd_toEndOf="@+id/user_avatar_image_view"
            app:layout_constraintStart_toStartOf="@+id/user_avatar_image_view"
            app:layout_constraintTop_toTopOf="@+id/user_avatar_image_view" />

        <View
            android:id="@+id/view"
            style="@style/DividerView"
            app:layout_constraintTop_toBottomOf="@+id/user_name_text_view" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/description_repository_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/repo_name_text_view"
            style="@style/InfoFieldTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:text="Repo Name here here here here here here here " />

        <android.support.constraint.Barrier
            android:id="@+id/repo_field_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="repo_name_text_view,textView3" />

        <View
            android:id="@+id/view1"
            style="@style/DividerView"
            app:layout_constraintTop_toBottomOf="@+id/repo_field_bottom" />

        <TextView
            android:id="@+id/desc_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/description_repository_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/repo_field_bottom" />

        <TextView
            android:id="@+id/desc_full_text_view"
            style="@style/InfoFieldTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/repo_field_bottom"
            tools:text="Description text here bla bala bla bal bal ba lab lab bla labsd dffd sfs gdfgdfgfg." />

        <android.support.constraint.Barrier
            android:id="@+id/desc_field_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="desc_text_view,desc_full_text_view" />

        <View
            android:id="@+id/view2"
            style="@style/DividerView"
            app:layout_constraintTop_toBottomOf="@+id/desc_field_bottom" />

        <TextView
            android:id="@+id/star_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/stars_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/desc_field_bottom" />

        <TextView
            android:id="@+id/stars_count_text_view"
            style="@style/InfoFieldTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/desc_field_bottom"
            tools:text="242" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            app:layout_constraintStart_toEndOf="@+id/stars_count_text_view"
            app:layout_constraintTop_toTopOf="@+id/stars_count_text_view"
            app:srcCompat="@drawable/ic_star" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>